// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadio.vue should not render aria-label attribute with no label value on input group 1`] = `

<div role="radio"
     aria-checked="false"
     class="input-group input-group--selection-controls radio"
>
  <label>
  </label>
  <div class="input-group__input">
    <i class="material-icons icon icon--selection-control">
      radio_button_unchecked
    </i>
    <div class="input-group--selection-controls__ripple"
         data-ripple="true"
    >
    </div>
    <input name="name"
           type="radio"
           style="display: none;"
    >
  </div>
</div>

`;

exports[`VRadio.vue should render aria-label attribute with label value on input group 1`] = `

<div role="radio"
     aria-checked="false"
     aria-label="Test"
     class="input-group input-group--selection-controls radio"
>
  <label>
    Test
  </label>
  <div class="input-group__input">
    <i class="material-icons icon icon--selection-control">
      radio_button_unchecked
    </i>
    <div class="input-group--selection-controls__ripple"
         data-ripple="true"
    >
    </div>
    <input name="name"
           type="radio"
           style="display: none;"
    >
  </div>
</div>

`;

exports[`VRadio.vue should render proper input name 1`] = `

<div role="radio"
     aria-checked="false"
     class="input-group input-group--selection-controls radio"
>
  <label>
  </label>
  <div class="input-group__input">
    <i class="material-icons icon icon--selection-control">
      radio_button_unchecked
    </i>
    <div class="input-group--selection-controls__ripple"
         data-ripple="true"
    >
    </div>
    <input name="name"
           type="radio"
           style="display: none;"
    >
  </div>
</div>

`;

exports[`VRadio.vue should render role and aria-checked attributes on input group 1`] = `

<div role="radio"
     aria-checked="true"
     class="input-group input-group--active input-group--selection-controls radio"
>
  <label>
  </label>
  <div class="input-group__input">
    <i class="material-icons icon icon--selection-control">
      radio_button_unchecked
    </i>
    <div class="input-group--selection-controls__ripple"
         data-ripple="true"
    >
    </div>
    <input name="name"
           type="radio"
           style="display: none;"
    >
  </div>
</div>

`;
